fixed burger menu on mobile"

--- a/style.css
+++ b/style.css
@@ -1,3 +1,22 @@
+
+/* Global variables */
+:root {
+
+  /* Phones */
+  --max-size-xs: 767px;
+  
+  /* Tablets */
+  --min-size-sm: 786px;
+  --max-size-sm: 991px;
+  
+  /* Small laptops */
+  --min-size-md: 992px;
+  --max-size-md: 1199px;
+
+  /* Laptops/desktops */
+  --min-size-lg: 1200px;
+}
+
 body, html {
 	margin: 0;
 	padding: 0;
@@ -7,68 +26,35 @@ body, html {
 	line-height: 1.72em;
 }
 
-nav ul.mainMenu{
-	
-  padding: 0;
-  display:flex;
-  flex-direction:row;
-}
-
 
 nav {
 		height: 4em;
-		width: 100%;
 		background: #eee;
 		border-bottom: 3px solid #00adefff;
 	}
 
 
-ul.dropdwn{
-	width: 100%;
-	
-	margin: 0;
-	padding: 0;
-}
-
-
-input#home {
-}
-
-input:checked + ul.dropdwn {
-    background: #000;
-}
-
-input:checked ~ ul.dropdwn {
-    background: #eee;
-}
-
-input:checked ~ ul.dropdwn {
-    max-height: 100%;
-}
-
-@media (min-width: 900px) {
-	p, h1, h2, h2, h4, ul, ol, table, .people {
-		width: 800px;
+@media (min-width: 992px) {
+	p, h1, h2, h2, h4, ul, ol, table, .people, nav-wrapper {
+		width: calc(var(--min-size-md) - 2em);
 		margin-left: auto;
 		margin-right: auto;
 	}
 	
-	nav ul {
+	body nav ul {
 		
-		width: 800px;
-		display: flex;
-		flex-flow: row nowrap;
-		justify-content: flex-start;
+		width: calc(var(--min-size-md) - 2em);
+		margin-left: auto;
+		margin-right: auto;
 
-		align-items: end;	
 	}
 
 	img {
-		max-width: 800px;
+		max-width: calc(var(--min-size-md) - 2em);
 	}
 }
 
-@media (max-width: 899px) {
+@media (max-width: 991px) {
 	/*
 	body, html {
 		margin: 0;
@@ -88,23 +74,9 @@ input:checked ~ ul.dropdwn {
 	}
 	
 	body nav ul {
-		margin-left: 1em;
+		width: 100%;
 	}
 
-	nav ul {
-		
-		margin-left: 1em;
-		margin-right: 1em;
-		display: flex;
-		flex-flow: row nowrap;
-		justify-content: flex-start;
-
-		align-items: end;	
-	}
-
-	navbar-toggler{
-		display: None;
-	}
 }
 
 
@@ -113,6 +85,7 @@ input:checked ~ ul.dropdwn {
 .sticky {
   position: fixed;
   top: 0;
+  width: 100%
 }
 
 /* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
@@ -122,20 +95,21 @@ input:checked ~ ul.dropdwn {
 }
 
 
-
+.dropdown-menu a {
+	font-size: 19px;
+}
 
 nav ul {
 	font-family: Verdana, sans-serif;
-	margin: auto auto 0 auto;
+	margin: auto auto auto auto;
 	padding: 0;
 	list-style: none;
-	z-order: 9999;
 }
 
 nav ul li {
 	display: block;
-	padding: 0;
-	margin: 0 2em 0.0em 0;	
+	padding: 0 1em 0 1em;
+	background-color: #eee;	
 }
 
 nav ul li a {
@@ -171,12 +145,43 @@ h1, h2, h2, h4 {
 .dropdown:hover .dropdown-menu {
     display: block;
     margin-top: 0; 
+    background-color: inherit; 
  }
+ nav ul {
+		display: flex;
+		flex-flow: row nowrap;
+		justify-content: flex-start;
+
+		align-items: end;	
+
+	}
 }
 @media (max-width: 767px) { 
-.dropdown:hover .dropdown-menu
-    display: none;
-    margin-top: auto; 
+.dropdown-menu {
+    display: block;
+    margin-top: auto;
+    padding: 0; 
+    border: 0px;
+  }
+
+  nav ul {
+
+		display: flex;
+		flex-flow: column nowrap;
+		justify-content: flex-start;
+
+
+	}
+  .navbar-collapse {
+
+	    background-color: #eee;
+		padding: 0 0.5em 0 0.5em ;
+    	border-radius: 0.25em;
+  }
+
+  .dropdown-menu {
+  	background-color: inherit;
+  }
 }
 
 
